# geomamt

./: MD5SUM  README.md  comandos  install-kubuntu14.04-basic.org  modelo.tar.xz  scripts.tar.xz
modelo/: lemi2egb  (+31 more)
progsProcMT/ats2asc/: .gitmodules  CMakeLists.txt
progsProcMT/ats2asc/cmake/modules/: FindQwt.cmake  gccUtils.cmake  modeWarnDbg.cmake  modeWarnRel.cmake  setModes.cmake  setWarningFlags.cmake
progsProcMT/ats2asc/src/: .ats2asc  CMakeLists.txt
progsProcMT/ats2asc/src/app/: CMakeLists.txt
progsProcMT/ats2asc/src/app/ats2asc/: CMakeLists.txt  LEIAME  ats2asc.cpp  ats2asc.hpp  declination.cpp  declination.h  main.cpp  meu_geomag60.c  meu_geomag60.h  meu_geomag70.c  meu_geomag70.h  system_dependent.cpp  system_dependent.hpp
progsProcMT/atsheader/: CMakeLists.txt  atsheader.cpp  atsheader.hpp  read_header.cpp  write_header.cpp
progsProcMT/atsheader/design/: ats-header.info  ats-header0.txt  ats-header1.txt  containers.hpp  format.awk  labels.derived  labels.primitive  labels0.txt  parameters.txt  program.txt  test.cpp  usage.txt
progsProcMT/mtlab/: CMakeLists.txt
progsProcMT/mtlab/src/: CMakeLists.txt  Doxyfile  README
progsProcMT/mtlab/src/html/: annotated.html  bahr__invariants_8hpp-source.html  bahr__invariants__impl_8hpp-source.html  dimensionalidade_8hpp-source.html  dimensionalidade_8hpp.html  files.html  functions.html  functions_func.html  functions_vars.html  import_8hpp-source.html  import__egbert_8hpp-source.html  import__egbert__impl_8hpp-source.html  import__impl_8hpp-source.html  import__jones_8hpp-source.html  import__jones__impl_8hpp-source.html  index.html  invariantes_8hpp-source.html  invariants__parameters_8hpp-source.html  measure_8hpp-source.html  namespacedimensionalidade.html  namespaceerro__manual_1_1base__xi__eta_1_1bahr__invariant.html  namespaceerro__manual_1_1base__xi__eta_1_1invariant__parameter.html  namespaceerro__manual_1_1base__xi__eta_1_1wal__invariant.html  namespaceimport.html  namespaceimport__egbert.html  namespaceimport__jones.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaceprogram.html  namespaces.html  namespacetransfer__function.html  pages.html  parametros-mt_8hpp-source.html  structmeasurement-members.html  structmeasurement.html  structtransfer__function_1_1impedance-members.html  structtransfer__function_1_1impedance.html  todo.html  transfer__functions_8hpp-source.html  (+4 more)
progsProcMT/mtlab/src/latex/: annotated.tex  dimensionalidade_8hpp.tex  doxygen.sty  files.tex  namespacedimensionalidade.tex  namespaceerro__manual_1_1base__xi__eta_1_1bahr__invariant.tex  namespaceerro__manual_1_1base__xi__eta_1_1invariant__parameter.tex  namespaceerro__manual_1_1base__xi__eta_1_1wal__invariant.tex  namespaceimport.tex  namespaceimport__egbert.tex  namespaceimport__jones.tex  namespaceprogram.tex  namespaces.tex  namespacetransfer__function.tex  refman.tex  structmeasurement.tex  structtransfer__function_1_1impedance.tex  todo.tex  wal__invariants_8hpp.tex
progsProcMT/mtlab/src/lib/: CMakeLists.txt
progsProcMT/mtlab/src/lib/import/: import.cpp  import.hpp  import_egbert.cpp  import_egbert.hpp  import_egbert_impl.hpp  import_impl.hpp  import_jones.cpp  import_jones.hpp  import_jones_impl.hpp
progsProcMT/mtlab/src/lib/invariants/dimensionalidade/: bahr_Q_dimensionalidade.cpp  dimensionalidade.hpp  inicializa_thresholds.cpp  wal_dimensionalidade.cpp
progsProcMT/mtlab/src/lib/invariants/erro_manual/base_xi-eta/: bahr_invariants.cpp  bahr_invariants.hpp  bahr_invariants_impl.hpp  invariants_parameters.cpp  invariants_parameters.hpp  wal_invariants.cpp  wal_invariants.hpp  wal_invariants_impl.hpp
progsProcMT/mtlab/src/lib/transfer_functions/: transfer_functions.cpp  transfer_functions.hpp
progsProcMT/mtlab/src/lib/udouble/: measure.hpp  udouble.cpp  udouble.hpp
progsProcMT/mtlab/src/progs/: CMakeLists.txt
progsProcMT/mtlab/src/progs/invariantes/: CMakeLists.txt  invariantes.cpp  invariantes.hpp  main.cpp
progsProcMT/mtlab/src/progs/parametros-mt/: CMakeLists.txt  main.cpp  parametros-mt.cpp  parametros-mt.hpp
progsProcMT/transferfunction/v2/: Makefile  Makefile.am  commandline.cpp  commandline.h  ediformat.cpp  egbertformat.cpp  emprogformat.cpp  imputdata.cpp  imputdata.h  jones_format0.cpp  jonesformat.cpp  main.cpp  pt1format.cpp  transferfunction  transferfunction.cpp
progsProcMT/transferfunction/v2/.deps/: commandline.P
progsProcMT/transferfunction/v2/docs/: Makefile  Makefile.in
progsProcMT/transferfunction/v2/docs/en/: Makefile  Makefile.in  index-1.html  index-6.html
(+3798 files in other folders)
