####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = transferfunction
transferfunction_SOURCES = ediformat.cpp pt1format.cpp egbertformat.cpp commandline.cpp emprogformat.cpp jonesformat.cpp imputdata.cpp transferfunction.cpp main.cpp 
transferfunction_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp transferfunction.cpp transferfunction.h imputdata.cpp imputdata.h jonesformat.cpp emprogformat.cpp commandline.cpp commandline.h egbertformat.cpp pt1format.cpp ediformat.cpp 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = transferfunction
