PROJECT(invariantes)

SET(CMAKE_CXX_FLAGS "-Wall")
SET(CMAKE_CXX_FLAGS_DEBUG  "-g -DBZ_DEBUG")
SET(CMAKE_CXX_FLAGS_RELEASE  "-O3 -DNDEBUG")

SET(Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/src/lib)

SET(APP_SRCS ${PROJECT_NAME}.cpp main.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${APP_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES} mtlab)
